src/loginjob.cpp
@@ -129,7 +129,6 @@ LoginJob::LoginJob(Session *session)
     : Job(*new LoginJobPrivate(this, session, i18n("Login")))
 {
     Q_D(LoginJob);
-    connect(d->sessionInternal(), SIGNAL(encryptionNegotiationResult(bool)), this, SLOT(sslResponse(bool)));
     qCDebug(KIMAP_LOG) << this;
 }
 
@@ -187,18 +186,21 @@ void LoginJob::doStart()
         return;
     }
 
+    // Get notified once encryption is successfully negotiated
+    connect(d->sessionInternal(), SIGNAL(encryptionNegotiationResult(bool)), this, SLOT(sslResponse(bool)));
+
     // Trigger encryption negotiation only if needed
     EncryptionMode encryptionMode = d->encryptionMode;
 
     const auto negotiatedEncryption = d->sessionInternal()->negotiatedEncryption();
     if (negotiatedEncryption != QSsl::UnknownProtocol) {
-        // If the socket is already encrypted, pretend we did not want any
-        // encryption
-        encryptionMode = Unencrypted;
+        // If the socket is already encrypted, proceed to the next state
+        d->sslResponse(true);
+        return;
     }
 
     if (encryptionMode == SSLorTLS) {
-        d->sessionInternal()->startSsl(QSsl::SecureProtocols);
+        // Negotiation got started by Session, but didn't complete yet. Continue in sslResponse.
     } else if (encryptionMode == STARTTLS) {
         // Check if STARTTLS is supported
         d->authState = LoginJobPrivate::PreStartTlsCapability;
